--- a/Aliento App/Presentation/Features/Campus/DetailCampus/DetailCampusVC.xib
+++ b/Aliento App/Presentation/Features/Campus/DetailCampus/DetailCampusVC.xib
@@ -13,45 +13,88 @@
             <connections>
                 <outlet property="campusImage" destination="a3B-hx-ISm" id="gr5-B8-vI7"/>
                 <outlet property="campusMaps" destination="03T-2B-zXK" id="aQc-U2-uBs"/>
+                <outlet property="contact" destination="AFx-Wj-HfT" id="La8-eQ-zfc"/>
+                <outlet property="descriptionLabel" destination="WVz-CR-9ME" id="8dL-NJ-DnK"/>
                 <outlet property="galleryDetails" destination="bTh-IR-ea2" id="J9m-xx-IBd"/>
-                <outlet property="label1" destination="mXW-JF-s7u" id="HqX-mE-JFW"/>
-                <outlet property="label2" destination="WVz-CR-9ME" id="8dL-NJ-DnK"/>
-                <outlet property="label3" destination="AFx-Wj-HfT" id="La8-eQ-zfc"/>
-                <outlet property="titleDetailsCampus" destination="b43-BS-HXm" id="eYg-wD-W7F"/>
+                <outlet property="name" destination="b43-BS-HXm" id="eYg-wD-W7F"/>
+                <outlet property="shortDescription" destination="mXW-JF-s7u" id="HqX-mE-JFW"/>
                 <outlet property="view" destination="iN0-l3-epB" id="fYc-82-339"/>
             </connections>
         </placeholder>
-        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b43-BS-HXm" userLabel="Title">
-                    <rect key="frame" x="30" y="67" width="333" height="20.333333333333329"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mXW-JF-s7u" userLabel="Label1">
-                    <rect key="frame" x="30" y="529.33333333333337" width="333" height="20.333333333333371"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WVz-CR-9ME" userLabel="Label2">
-                    <rect key="frame" x="30" y="557.66666666666663" width="333" height="20.333333333333371"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AFx-Wj-HfT" userLabel="Label3">
-                    <rect key="frame" x="30" y="586" width="333" height="0.0"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ph6-o2-qL0">
+                    <rect key="frame" x="0.0" y="59" width="393" height="716.66666666666663"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Ir-oW-IE5">
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="462.33333333333331"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b43-BS-HXm" userLabel="Name">
+                                    <rect key="frame" x="30" y="7.9999999999999982" width="333" height="20.333333333333329"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a3B-hx-ISm">
+                                    <rect key="frame" x="30" y="36.333333333333314" width="333" height="333"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="a3B-hx-ISm" secondAttribute="height" multiplier="1:1" id="b4Q-cX-8Br"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="short description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mXW-JF-s7u" userLabel="ShortDescription">
+                                    <rect key="frame" x="30" y="377.33333333333331" width="333" height="20.333333333333314"/>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WVz-CR-9ME" userLabel="Description">
+                                    <rect key="frame" x="30" y="405.66666666666669" width="333" height="20.333333333333314"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="contact" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AFx-Wj-HfT" userLabel="Contact">
+                                    <rect key="frame" x="30" y="434" width="333" height="20.333333333333314"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="WVz-CR-9ME" secondAttribute="trailing" constant="30" id="1AP-Sc-FSs"/>
+                                <constraint firstAttribute="trailing" secondItem="a3B-hx-ISm" secondAttribute="trailing" constant="30" id="9hn-Bg-hcW"/>
+                                <constraint firstItem="b43-BS-HXm" firstAttribute="leading" secondItem="2Ir-oW-IE5" secondAttribute="leading" constant="30" id="Gcg-VV-c9O"/>
+                                <constraint firstItem="mXW-JF-s7u" firstAttribute="leading" secondItem="2Ir-oW-IE5" secondAttribute="leading" constant="30" id="Ie5-7n-Ckh"/>
+                                <constraint firstItem="WVz-CR-9ME" firstAttribute="leading" secondItem="2Ir-oW-IE5" secondAttribute="leading" constant="30" id="MrM-OS-pMo"/>
+                                <constraint firstAttribute="trailing" secondItem="mXW-JF-s7u" secondAttribute="trailing" constant="30" id="PjE-dq-F1e"/>
+                                <constraint firstItem="a3B-hx-ISm" firstAttribute="leading" secondItem="2Ir-oW-IE5" secondAttribute="leading" constant="30" id="S3f-wj-7Ln"/>
+                                <constraint firstAttribute="trailing" secondItem="b43-BS-HXm" secondAttribute="trailing" constant="30" id="U3B-1D-OA9"/>
+                                <constraint firstItem="AFx-Wj-HfT" firstAttribute="leading" secondItem="2Ir-oW-IE5" secondAttribute="leading" constant="30" id="Uab-YD-pJb"/>
+                                <constraint firstAttribute="trailing" secondItem="AFx-Wj-HfT" secondAttribute="trailing" constant="30" id="fqo-FB-D59"/>
+                                <constraint firstItem="WVz-CR-9ME" firstAttribute="top" secondItem="mXW-JF-s7u" secondAttribute="bottom" constant="8" id="o0f-AV-FVa"/>
+                                <constraint firstItem="mXW-JF-s7u" firstAttribute="top" secondItem="a3B-hx-ISm" secondAttribute="bottom" constant="8" id="pA7-MA-5fA"/>
+                                <constraint firstItem="a3B-hx-ISm" firstAttribute="top" secondItem="b43-BS-HXm" secondAttribute="bottom" constant="8" id="rhx-Z9-vHA"/>
+                                <constraint firstAttribute="bottom" secondItem="AFx-Wj-HfT" secondAttribute="bottom" constant="8" id="tWc-3T-4Gf"/>
+                                <constraint firstItem="b43-BS-HXm" firstAttribute="top" secondItem="2Ir-oW-IE5" secondAttribute="top" constant="8" id="vXv-MG-Gro"/>
+                                <constraint firstItem="AFx-Wj-HfT" firstAttribute="top" secondItem="WVz-CR-9ME" secondAttribute="bottom" constant="8" id="xZs-Ax-xaV"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="2Ir-oW-IE5" firstAttribute="bottom" secondItem="q60-7n-ylp" secondAttribute="bottom" id="Ch6-dh-yzt"/>
+                        <constraint firstItem="2Ir-oW-IE5" firstAttribute="leading" secondItem="q60-7n-ylp" secondAttribute="leading" id="O1N-Pa-PZd"/>
+                        <constraint firstItem="2Ir-oW-IE5" firstAttribute="trailing" secondItem="q60-7n-ylp" secondAttribute="trailing" id="gjH-ch-D7w"/>
+                        <constraint firstItem="2Ir-oW-IE5" firstAttribute="width" secondItem="tPW-j0-J9b" secondAttribute="width" id="r2K-qB-5l0"/>
+                        <constraint firstItem="2Ir-oW-IE5" firstAttribute="top" secondItem="q60-7n-ylp" secondAttribute="top" id="wvj-IC-hzB"/>
+                    </constraints>
+                    <viewLayoutGuide key="contentLayoutGuide" id="q60-7n-ylp"/>
+                    <viewLayoutGuide key="frameLayoutGuide" id="tPW-j0-J9b"/>
+                </scrollView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bTh-IR-ea2">
-                    <rect key="frame" x="30" y="775" width="107" height="35"/>
+                    <rect key="frame" x="30" y="775.66666666666663" width="107" height="34.333333333333371"/>
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain" title="Ver Galeria"/>
                 </button>
@@ -60,36 +103,22 @@
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain" title="Abrir Maps"/>
                 </button>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a3B-hx-ISm">
-                    <rect key="frame" x="30" y="95.333333333333314" width="333" height="425.99999999999994"/>
-                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="b43-BS-HXm" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="8" id="19j-2G-42y"/>
-                <constraint firstItem="mXW-JF-s7u" firstAttribute="top" secondItem="a3B-hx-ISm" secondAttribute="bottom" constant="8" id="3Ys-vf-JlA"/>
-                <constraint firstItem="a3B-hx-ISm" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.5" id="Cb4-hQ-MRJ"/>
-                <constraint firstItem="mXW-JF-s7u" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="GMX-50-anx"/>
-                <constraint firstItem="AFx-Wj-HfT" firstAttribute="top" secondItem="WVz-CR-9ME" secondAttribute="bottom" constant="8" id="HYD-Bc-I7L"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Ph6-o2-qL0" secondAttribute="trailing" id="9kB-zo-CAV"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="03T-2B-zXK" secondAttribute="trailing" constant="30" id="MEE-Nt-bEN"/>
-                <constraint firstItem="b43-BS-HXm" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="NV9-8l-IjV"/>
-                <constraint firstItem="a3B-hx-ISm" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="NmK-B6-0Ei"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="03T-2B-zXK" secondAttribute="bottom" constant="8" id="RFC-ZI-ajV"/>
-                <constraint firstItem="WVz-CR-9ME" firstAttribute="top" secondItem="mXW-JF-s7u" secondAttribute="bottom" constant="8" id="STf-6l-7Xp"/>
+                <constraint firstItem="Ph6-o2-qL0" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="Thq-aE-gHr"/>
+                <constraint firstItem="Ph6-o2-qL0" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="WAf-Fi-1E2"/>
                 <constraint firstItem="bTh-IR-ea2" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="fbg-LI-wJK"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="a3B-hx-ISm" secondAttribute="trailing" constant="30" id="hEP-UK-JZV"/>
-                <constraint firstItem="WVz-CR-9ME" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="k6F-i2-L04"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="mXW-JF-s7u" secondAttribute="trailing" constant="30" id="pto-b8-jxX"/>
-                <constraint firstItem="AFx-Wj-HfT" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="30" id="qWM-Sf-FTF"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="WVz-CR-9ME" secondAttribute="trailing" constant="30" id="tFk-yN-Jpt"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="bTh-IR-ea2" secondAttribute="bottom" constant="8" id="uSY-gm-3Rr"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="b43-BS-HXm" secondAttribute="trailing" constant="30" id="wXI-VF-eQY"/>
-                <constraint firstItem="a3B-hx-ISm" firstAttribute="top" secondItem="b43-BS-HXm" secondAttribute="bottom" constant="8" id="wkn-d8-N45"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="AFx-Wj-HfT" secondAttribute="trailing" constant="30" id="y1S-qo-AZo"/>
+                <constraint firstItem="bTh-IR-ea2" firstAttribute="top" secondItem="Ph6-o2-qL0" secondAttribute="bottom" id="w9N-fH-7lH"/>
             </constraints>
             <point key="canvasLocation" x="46.564885496183201" y="19.718309859154932"/>
         </view>
+        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
     </objects>
     <resources>
         <systemColor name="systemBackgroundColor">
